<resources>
    <string name="app_name" translatable="false">Meteo</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="enter_a_city">Enter a city</string>
    <string name="search_a_city">Search a city</string>
    <string name="city_name">City name</string>
    <string name="country_flag">Country flag</string>
    <string name="location_icon">Location icon</string>
    <string name="city_menu">City menu</string>
    <string name="updated_at">Updated at</string>
    <string name="degree">Degree</string>
    <string name="description">Description</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="feels_like">Feels like</string>
    <string name="hourly_forecast">Hourly Forecast</string>
    <string name="daily_forecast">Daily Forecast</string>
    <string name="monday">Monday</string>
    <string name="weather_icon">Weather icon</string>
    <string name="tuesday">Tuesday</string>
    <string name="sunny">Sunny</string>
    <string name="cloudy">Cloudy</string>
    <string name="wednesday">Wednesday</string>
    <string name="rainy">Rainy</string>
    <string name="thursday">Thursday</string>
    <string name="snowy">Snowy</string>
    <string name="friday">Friday</string>
    <string name="foggy">Foggy</string>
    <string name="hour">Hour</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="thunderstorm">Thunderstorm</string>
    <string name="cold">Cold</string>
    <string name="hot">Hot</string>
    <string name="unknown">Unknown</string>
    <string name="add_new_city">Add new city</string>
    <string name="current_city">Current city</string>
    <string name="choose_city_to_use">Choose a city to use Meteo.</string>
    <string name="forecast_fetch_failed">An error occurred while fetching the forecast.</string>
    <string name="error">Error</string>
    <string name="city_not_found">City not found.</string>
    <string name="settings_icon">Settings icon</string>
    <string name="enter_an_api_key">Enter an API Key</string>
    <string name="celcius" translatable="false">Celcius</string>
    <string name="fahrenheit" translatable="false">Fahrenheit</string>
    <string name="kelvin" translatable="false">Kelvin</string>
    <string name="restart_for_effects">Please restart the app to see effects.</string>
</resources>