<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
 xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardBackgroundColor="#20FFFFFF"
    style="@style/Widget.Material3.CardView.Filled">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingVertical="8dp">

            <ImageView
                android:id="@+id/day1Icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/weather_icon"
                android:src="@drawable/ic_outlined_sunny_24"
                app:tint="?android:textColorPrimary" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/day1Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/monday"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/day1Description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/sunny"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/day1Temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/degree"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingVertical="8dp">

            <ImageView
                android:id="@+id/day2Icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/weather_icon"
                android:src="@drawable/ic_outlined_cloudy_24"
                app:tint="?android:textColorPrimary" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/day2Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/tuesday"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/day2Description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/cloudy"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/day2Temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/degree"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingVertical="8dp">

            <ImageView
                android:id="@+id/day3Icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/weather_icon"
                android:src="@drawable/ic_rainy_umbrella_24"
                app:tint="?android:textColorPrimary" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/day3Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/wednesday"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/day3Description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/rainy"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/day3Temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/degree"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingVertical="8dp">

            <ImageView
                android:id="@+id/day4Icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/weather_icon"
                android:src="@drawable/ic_snowy_24"
                app:tint="?android:textColorPrimary" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/day4Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/thursday"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/day4Description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/snowy"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/day4Temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/degree"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingVertical="8dp">

            <ImageView
                android:id="@+id/day5Icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/weather_icon"
                android:src="@drawable/ic_foggy_24"
                app:tint="?android:textColorPrimary" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/day5Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/friday"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/day5Description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/foggy"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/day5Temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/degree"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
